--- a/locales/sr.json
+++ b/locales/sr.json
@@ -315,7 +315,6 @@
         "untagged_area": "Неозначена област",
         "many_deletions": "Бришете {n} објеката. Да ли сте сигурни да желите то да урадите? Ово ће их избрисати са мапе коју сви виде на openstreetmap.org.",
         "tag_suggests_area": "Ознака {ознака} указује да би линија требало да буде област, али није област",
-        "untagged_tooltip": "Одаберите врсту обележја којим је ова {geometry} описана.",
         "deprecated_tags": "Застареле ознаке: {tags}"
     },
     "zoom": {
@@ -406,6 +405,9 @@
             "category-rail": {
                 "name": "Шина"
             },
+            "category-restriction": {
+                "name": "Ограничења"
+            },
             "category-road": {
                 "name": "Пут"
             },
@@ -463,10 +465,18 @@
             "address": {
                 "label": "Адреса",
                 "placeholders": {
-                    "number": "123",
+                    "housename": "Назив куће",
+                    "housenumber": "123",
                     "street": "Улица",
                     "city": "Град",
-                    "postcode": "Поштански број"
+                    "place": "Место",
+                    "hamlet": "Засеок",
+                    "suburb": "Предграђе",
+                    "subdistrict": "Подокруг",
+                    "district": "Округ",
+                    "province": "Провинција",
+                    "state": "Савезна држава",
+                    "country": "Држава"
                 }
             },
             "admin_level": {
@@ -581,6 +591,9 @@
             "entrance": {
                 "label": "Врста"
             },
+            "except": {
+                "label": "Изузеци"
+            },
             "fax": {
                 "label": "Факс",
                 "placeholder": "+31 42 123 4567"
@@ -593,6 +606,24 @@
             },
             "fixme": {
                 "label": "Поправи ме"
+            },
+            "fuel/biodiesel": {
+                "label": "Продаје биодизел"
+            },
+            "fuel/diesel": {
+                "label": "Продаје дизел"
+            },
+            "fuel/e10": {
+                "label": "Продаје Е10"
+            },
+            "fuel/e85": {
+                "label": "Продаје Е85"
+            },
+            "fuel/lpg": {
+                "label": "Продаје пропан"
+            },
+            "fuel/octane_98": {
+                "label": "Продаје премијум бензин"
             },
             "gauge": {
                 "label": "Колосек"
@@ -610,6 +641,7 @@
                 "placeholder": "Број рупе (1-18)"
             },
             "handicap": {
+                "label": "Хендикеп",
                 "placeholder": "1-18"
             },
             "highway": {
@@ -642,6 +674,9 @@
                     "terminal": "Терминал"
                 }
             },
+            "lamp_type": {
+                "label": "Врста"
+            },
             "landuse": {
                 "label": "Врста"
             },
@@ -654,6 +689,9 @@
             },
             "leisure": {
                 "label": "Врста"
+            },
+            "length": {
+                "label": "Дужина (метара)"
             },
             "levels": {
                 "label": "Нивои",
@@ -722,6 +760,9 @@
             "place": {
                 "label": "Врста"
             },
+            "population": {
+                "label": "Насељеност"
+            },
             "power": {
                 "label": "Врста"
             },
@@ -760,6 +801,9 @@
             },
             "restriction": {
                 "label": "Врста"
+            },
+            "restrictions": {
+                "label": "Znaci zabrane kretanja"
             },
             "route": {
                 "label": "Врста"
@@ -863,6 +907,9 @@
             "wheelchair": {
                 "label": "Прилаз за инвалидска колица"
             },
+            "width": {
+                "label": "Ширина (метара)"
+            },
             "wikipedia": {
                 "label": "Википедија"
             },
@@ -964,6 +1011,9 @@
             "amenity/college": {
                 "name": "Факултет"
             },
+            "amenity/compressed_air": {
+                "name": "Компримовани ваздух"
+            },
             "amenity/courthouse": {
                 "name": "Судница"
             },
@@ -1008,6 +1058,9 @@
             },
             "amenity/nightclub": {
                 "name": "Ноћни клуб"
+            },
+            "amenity/parking": {
+                "name": "Ауто паркинг"
             },
             "amenity/pharmacy": {
                 "name": "Апотека"
@@ -1184,7 +1237,7 @@
                 "name": "Студентски дом"
             },
             "building/entrance": {
-                "name": "Улаз"
+                "name": "Улаз/излаз"
             },
             "building/garage": {
                 "name": "Гаража"
@@ -1246,8 +1299,14 @@
             "craft/bookbinder": {
                 "name": "Књиговезац"
             },
+            "craft/brewery": {
+                "name": "Пивара"
+            },
             "craft/carpenter": {
                 "name": "Столар"
+            },
+            "craft/carpet_layer": {
+                "name": "Паркетар"
             },
             "craft/clockmaker": {
                 "name": "Сајџија"
@@ -1309,6 +1368,9 @@
             "craft/tailor": {
                 "name": "Kројач"
             },
+            "craft/tiler": {
+                "name": "Керамичар"
+            },
             "craft/tinsmith": {
                 "name": "Калајџија"
             },
@@ -1331,10 +1393,13 @@
                 "name": "Телефон за хитне случајеве"
             },
             "entrance": {
-                "name": "Улаз"
+                "name": "Улаз/излаз"
             },
             "footway/crossing": {
                 "name": "Прелаз"
+            },
+            "footway/crosswalk": {
+                "name": "Пешачки прелаз"
             },
             "footway/sidewalk": {
                 "name": "Тротоар"
@@ -1358,6 +1423,9 @@
             "highway/crossing": {
                 "name": "Прелаз"
             },
+            "highway/crosswalk": {
+                "name": "Пешачки прелаз"
+            },
             "highway/cycleway": {
                 "name": "Бициклистичка стаза"
             },
@@ -1372,9 +1440,6 @@
             },
             "highway/motorway": {
                 "name": "Магистрални пут"
-            },
-            "highway/motorway_junction": {
-                "name": "Магистрално чвориште"
             },
             "highway/motorway_link": {
                 "name": "Прилаз аутопуту"
@@ -1429,6 +1494,9 @@
             },
             "highway/stop": {
                 "name": "Стоп"
+            },
+            "highway/street_lamp": {
+                "name": "Улична лампа"
             },
             "highway/tertiary": {
                 "name": "Локални пут"
@@ -1493,6 +1561,9 @@
             "landuse/cemetery": {
                 "name": "Гробље"
             },
+            "landuse/churchyard": {
+                "name": "Црквено двориште"
+            },
             "landuse/commercial": {
                 "name": "Пословна област"
             },
@@ -1501,6 +1572,9 @@
             },
             "landuse/farm": {
                 "name": "Фарма"
+            },
+            "landuse/farmland": {
+                "name": "Обрадиво земљиште"
             },
             "landuse/farmyard": {
                 "name": "Сеоско двориште"
@@ -1519,6 +1593,9 @@
             },
             "landuse/meadow": {
                 "name": "Ливада"
+            },
+            "landuse/military": {
+                "name": "Војска "
             },
             "landuse/orchard": {
                 "name": "Воћњак"
@@ -1592,9 +1669,6 @@
             "leisure/slipway": {
                 "name": "Навоз"
             },
-            "leisure/sports_center": {
-                "name": "Спортски центар"
-            },
             "leisure/stadium": {
                 "name": "Стадион"
             },
@@ -1618,6 +1692,9 @@
             },
             "man_made/embankment": {
                 "name": "Насип"
+            },
+            "man_made/flagpole": {
+                "name": "Јарбол за заставу"
             },
             "man_made/lighthouse": {
                 "name": "Светионик"
@@ -1648,6 +1725,9 @@
             },
             "man_made/water_works": {
                 "name": "Водовод"
+            },
+            "military/airfield": {
+                "name": "Узлетиште"
             },
             "military/barracks": {
                 "name": "Касарна"
@@ -1718,8 +1798,17 @@
             "office": {
                 "name": "Канцеларија"
             },
+            "office/accountant": {
+                "name": "Рачуновођа"
+            },
+            "office/architect": {
+                "name": "Архитекта"
+            },
             "office/educational_institution": {
                 "name": "Образовна институција"
+            },
+            "office/employment_agency": {
+                "name": "Служба за запошљавање"
             },
             "office/lawyer": {
                 "name": "Адвокатска канцеларија"
@@ -1967,6 +2056,9 @@
             "shop/pet": {
                 "name": "Продавница кућних љубимаца"
             },
+            "shop/seafood": {
+                "name": "Продавница морске хране "
+            },
             "shop/shoes": {
                 "name": "Продавница обуће"
             },
@@ -1996,6 +2088,9 @@
             },
             "shop/video": {
                 "name": "Видео клуб"
+            },
+            "shop/wine": {
+                "name": "Продавница вина"
             },
             "tourism": {
                 "name": "Туризам"
@@ -2059,6 +2154,27 @@
             },
             "type/restriction": {
                 "name": "Ограничење"
+            },
+            "type/restriction/no_left_turn": {
+                "name": "Забрана скретања улево"
+            },
+            "type/restriction/no_right_turn": {
+                "name": "Забрана скретања удесно"
+            },
+            "type/restriction/no_straight_on": {
+                "name": "Забрана саобраћаја у једном смеру"
+            },
+            "type/restriction/no_u_turn": {
+                "name": "Забрана полукружног окретања"
+            },
+            "type/restriction/only_left_turn": {
+                "name": "Обавезан смер - лево"
+            },
+            "type/restriction/only_right_turn": {
+                "name": "Обавезан смер - десно"
+            },
+            "type/restriction/only_straight_on": {
+                "name": "Обавезан смер - право"
             },
             "type/route": {
                 "name": "Путања"
